envoy-configs/lds.yaml
resources:
  - "@type": type.googleapis.com/envoy.config.listener.v3.Listener
    name: listener_0
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
      - filters:
          name: envoy.filters.network.http_connection_manager
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
            stat_prefix: ingress_http
            codec_type: AUTO
            http_filters:
              - name: envoy.filters.http.grpc_json_transcoder
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_json_transcoder.v3.GrpcJsonTranscoder
                  proto_descriptor: "/tmp/protos/server.pb"
              - name: envoy.filters.http.router
            route_config:
              name: local_route
              virtual_hosts:
                - name: local_service
                  domains: ["*"]
                  routes:
                    - match:
                        prefix: "/ok"
                      direct_response:
                        status: 200
                        body:
                          inline_string: "OK"
                    - match:
                        prefix: "/"
                      typed_per_filter_config:
                        envoy.filters.http.grpc_json_transcoder:
                          "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_json_transcoder.v3.GrpcJsonTranscoder
                          proto_descriptor: "/tmp/protos/server.pb"
                          services:
                            - helloworld.Greeter
                            - bookstore.BookStore
                          # auto_mapping: true
                          # match_incoming_request_route: true
                          print_options:
                            add_whitespace: true
                            always_print_primitive_fields: true
                            always_print_enums_as_ints: false
                            preserve_proto_field_names: false
                          request_validation_options:
                            reject_unknown_method: true
                      route:
                        cluster: grpc
                        timeout: 2s
                    # - match:
                    #     prefix: "/bookstore.BookStore/"
                    #   typed_per_filter_config:
                    #     envoy.filters.http.grpc_json_transcoder:
                    #       "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_json_transcoder.v3.GrpcJsonTranscoder
                    #       proto_descriptor: "/tmp/protos/server.pb"
                    #       services:
                    #         - bookstore.BookStore
                    #       # auto_mapping: true
                    #       # match_incoming_request_route: true
                    #       print_options:
                    #         add_whitespace: true
                    #         always_print_primitive_fields: true
                    #         always_print_enums_as_ints: false
                    #         preserve_proto_field_names: false
                    #       request_validation_options:
                    #         reject_unknown_method: true
                    #   route:
                    #     cluster: grpc
                    #     timeout: 2s
                    # - match:
                    #     prefix: "/"
                    #   direct_response:
                    #     status: 404
                    #     body:
                    #       inline_string: "Not Found"
